--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev --turbopack",
     "dev:https": "next dev --turbopack --experimental-https --experimental-https-key ./certs/key.pem --experimental-https-cert ./certs/cert.pem",
     "setup:https": "node scripts/setup-https.js",
-    "build": "next build --turbopack",
-    "build:vercel": "next build",
+    "build": "next build",
     "start": "next start",
     "lint": "eslint",
     "analyze:performance": "node scripts/test-performance.js",
